// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeaderMobile/ChannelHeaderMobile should match snapshot 1`] = `
<nav
  className="navbar navbar-default navbar-fixed-top"
  id="navbar"
  role="navigation"
>
  <div
    className="container-fluid theme"
  >
    <div
      className="navbar-header"
    >
      <Connect(CollapseLhsButton) />
      <div
        className="navbar-brand"
      >
        <Connect(injectIntl(MobileChannelHeaderDropdown)) />
      </div>
      <div
        className="spacer"
      />
      <Connect(NavbarInfoButton)
        channel={
          Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "display_name",
            "group_constrained": false,
            "header": "header",
            "id": "channel_id",
            "last_post_at": 0,
            "last_root_post_at": 0,
            "name": "DN",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "type": "O",
            "update_at": 0,
          }
        }
      />
      <Connect(Component) />
      <Connect(injectIntl(MobileChannelHeaderPlug))
        channel={
          Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "display_name",
            "group_constrained": false,
            "header": "header",
            "id": "channel_id",
            "last_post_at": 0,
            "last_root_post_at": 0,
            "name": "DN",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "type": "O",
            "update_at": 0,
          }
        }
        isDropdown={false}
      />
      <Connect(CollapseRhsButton) />
    </div>
  </div>
</nav>
`;

exports[`components/ChannelHeaderMobile/ChannelHeaderMobile should match snapshot, for default channel 1`] = `
<nav
  className="navbar navbar-default navbar-fixed-top"
  id="navbar"
  role="navigation"
>
  <div
    className="container-fluid theme"
  >
    <div
      className="navbar-header"
    >
      <Connect(CollapseLhsButton) />
      <div
        className="navbar-brand"
      >
        <Connect(injectIntl(MobileChannelHeaderDropdown)) />
      </div>
      <div
        className="spacer"
      />
      <Connect(NavbarInfoButton)
        channel={
          Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "Town Square",
            "group_constrained": false,
            "header": "header",
            "id": "123",
            "last_post_at": 0,
            "last_root_post_at": 0,
            "name": "town-square",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "type": "O",
            "update_at": 0,
          }
        }
      />
      <Connect(Component) />
      <Connect(injectIntl(MobileChannelHeaderPlug))
        channel={
          Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "Town Square",
            "group_constrained": false,
            "header": "header",
            "id": "123",
            "last_post_at": 0,
            "last_root_post_at": 0,
            "name": "town-square",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "type": "O",
            "update_at": 0,
          }
        }
        isDropdown={false}
      />
      <Connect(CollapseRhsButton) />
    </div>
  </div>
</nav>
`;

exports[`components/ChannelHeaderMobile/ChannelHeaderMobile should match snapshot, for private channel 1`] = `
<nav
  className="navbar navbar-default navbar-fixed-top"
  id="navbar"
  role="navigation"
>
  <div
    className="container-fluid theme"
  >
    <div
      className="navbar-header"
    >
      <Connect(CollapseLhsButton) />
      <div
        className="navbar-brand"
      >
        <Connect(injectIntl(MobileChannelHeaderDropdown)) />
      </div>
      <div
        className="spacer"
      />
      <Connect(NavbarInfoButton)
        channel={
          Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "display_name",
            "group_constrained": false,
            "header": "header",
            "id": "channel_id",
            "last_post_at": 0,
            "last_root_post_at": 0,
            "name": "DN",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "type": "P",
            "update_at": 0,
          }
        }
      />
      <Connect(Component) />
      <Connect(injectIntl(MobileChannelHeaderPlug))
        channel={
          Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "display_name",
            "group_constrained": false,
            "header": "header",
            "id": "channel_id",
            "last_post_at": 0,
            "last_root_post_at": 0,
            "name": "DN",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "type": "P",
            "update_at": 0,
          }
        }
        isDropdown={false}
      />
      <Connect(CollapseRhsButton) />
    </div>
  </div>
</nav>
`;

exports[`components/ChannelHeaderMobile/ChannelHeaderMobile should match snapshot, if DM channel 1`] = `
<nav
  className="navbar navbar-default navbar-fixed-top"
  id="navbar"
  role="navigation"
>
  <div
    className="container-fluid theme"
  >
    <div
      className="navbar-header"
    >
      <Connect(CollapseLhsButton) />
      <div
        className="navbar-brand"
      >
        <Connect(injectIntl(MobileChannelHeaderDropdown)) />
      </div>
      <div
        className="spacer"
      />
      <Connect(NavbarInfoButton)
        channel={
          Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "display_name",
            "group_constrained": false,
            "header": "header",
            "id": "channel_id",
            "last_post_at": 0,
            "last_root_post_at": 0,
            "name": "user_id_1__user_id_2",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "type": "D",
            "update_at": 0,
          }
        }
      />
      <Connect(Component) />
      <Connect(injectIntl(MobileChannelHeaderPlug))
        channel={
          Object {
            "create_at": 0,
            "creator_id": "id",
            "delete_at": 0,
            "display_name": "display_name",
            "group_constrained": false,
            "header": "header",
            "id": "channel_id",
            "last_post_at": 0,
            "last_root_post_at": 0,
            "name": "user_id_1__user_id_2",
            "purpose": "purpose",
            "scheme_id": "id",
            "team_id": "team_id",
            "type": "D",
            "update_at": 0,
          }
        }
        isDropdown={false}
      />
      <Connect(CollapseRhsButton) />
    </div>
  </div>
</nav>
`;
